fixed course page on mobile

--- a/static/style/media.css
+++ b/static/style/media.css
@@ -190,9 +190,6 @@
 
 @media (max-width: 992px) {
 
-    /*    .hero {
-            padding-top: 100px;
-        }*/
     .hero__title {
         font-size: 36px;
         margin: 0
@@ -476,6 +473,16 @@
 }
 
 @media (max-width: 768px) {
+
+    .courses__hero-content h1 {
+        font-size: 36px;
+    }
+
+
+    .courses__hero {
+        height: 250px;
+    }
+
     .about__company-content-advantages {
         margin-top: 20px;
     }
@@ -638,6 +645,15 @@
 }
 
 @media (max-width: 575.98px) {
+    .tab-item-header {
+        flex-direction: column;
+        row-gap: 15px;
+    }
+
+    .courses__hero-content h1 {
+        font-size: 24px;
+    }
+
     .hero {
         padding-top: 0;
     }
